--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,8 +3,50 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+	<link href="./css/common/reset.css" rel="stylesheet">
+	<link href="./css/index/index.css" rel="stylesheet">
 </head>
 <body>
+	<!-- Header -->
+	<header>
+		<div id="header">
+			<div class="top">
+			<span>전략적 서비스를 위한 대한민국 최고의 상생 플랫폼</span>
+			</div>
+			<div id="head">
+				<a href="index.html">
+					<img alt="" src="./images/header_logo.png">
+				</a>
+			<div id="main_manu">
+				<ul>
+					<li>
+						<a href="#">COMPANY</a>			
+					</li>
+					<li>
+						<a href="#">WORK</a>
+					</li>
+					<li>
+						<a href="#">SI/SM</a>
+					</li>
+					<li>
+						<a href="#">STARTUP</a>
+					</li>
+					<li>
+						<a href="#">CONTACT</a>
+	
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>	
+	</header>
+	
+	
+	<!-- section -->
+	
+	
+	
+	<!-- footer -->
 	
 </body>
 </html>
