--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,7 +15,7 @@
 			</div>
 			<div id="head">
 				<a href="index.html">
-					<img alt="" src="./images/header_logo.png">
+					<img alt="" src="./images/common/header_logo.png">
 				</a>
 			<div id="main_manu">
 				<ul>
@@ -43,10 +43,27 @@
 	
 	
 	<!-- section -->
-	
-	
+	<section id="main_container">
+		<article id="content_1">
+			<img alt="" src="./">
+		</article>
+		<article id="content_2">
+		</article>
+		<article id="content_3">
+		</article>
+		<article id="content_4">
+		</article>
+		<article id="content_5">
+		</article>
+		<article id="content_6">
+		</article>
+	</section>
 	
 	<!-- footer -->
-	
+	<footer>
+		<div id="ft_wrap">
+			
+		</div>
+	</footer>
 </body>
 </html>
