--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,7 @@
 			<div id="main_manu">
 				<ul>
 					<li>
-						<a href="#">COMPANY</a>			
+						<a href="#">BOARD</a>			
 					</li>
 					<li>
 						<a href="#">WORK</a>
@@ -45,24 +45,59 @@
 	<!-- section -->
 	<section id="main_container">
 		<article id="content_1">
-			<img alt="" src="./">
+		<div class="con1_font">
+			<p><span class="con1_font_1">PEOPLE THAT WORK HERE ARE
+SMART AND GENUINE
+SMART AND GENUINE SERVICES FOR BUSINESSES</span><br>
+우리는 더 나은 방법, 더 새로운 방식, 더 재미있는 시도를 즐길 줄 알고
+그것을 함께 도전하고, 경험하며, 만들어가는 팀을 소중히 생각합니다<p>
+		</div>
 		</article>
 		<article id="content_2">
+			<div>
+				<p>
+				<span class="con2_font">
+				  About
+				  <strong>YSUNweb</strong>
+				  Program and Activity
+				</span><br><br>
+				우리는 브랜드의 목적에 가장 알맞은 
+				상황을 설정하고, 콘텐츠를 제작하여,<br>
+				가장 적합한 채널을 통해 노출하고 
+				효율을 분석합니다.<br>
+				<strong>비용이 곧 성과가 되던 
+				선형적 비례의 마케팅 구조를
+				바꿔가고 있습니다.</strong>				
+			</p><br>
+			<a href="#">▼ READ MORE</a>
+			</div>
 		</article>
 		<article id="content_3">
+			 <ul>
+			 	<li>
+			 		
+			 	</li>
+			 
+			 </ul>
 		</article>
 		<article id="content_4">
+			<p>
+				<strong>YSUNWEB ZONE</strong>
+			</p>
+			<div class= con4_img>
+			<img alt="" src="./images/banner/clients222.png">
+			</div>
 		</article>
 		<article id="content_5">
-		</article>
-		<article id="content_6">
 		</article>
 	</section>
 	
 	<!-- footer -->
 	<footer>
 		<div id="ft_wrap">
-			
+		<img alt="" src="./images/banner/logo2.png">
+			<p>서울시 강남구 역삼동 636-6 스카이타워 208호 / 사업자등록번호 : 587-08-01157 / 대표전화 : 02-557-4288 / 팩스 : 02-6442 4485 / 이메일 : ys523333@ysunweb.com
+YSUNWEB All Rights Reserved</p>
 		</div>
 	</footer>
 </body>
