--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -89,6 +89,35 @@ SMART AND GENUINE SERVICES FOR BUSINESSES</span><br>
 			</div>
 		</article>
 		<article id="content_5">
+			<div class="con5_view">
+				<ul>
+					<li class="con_5_ba1">
+						<span class="mid_img"><img src="./images/banner/mid02.png" alt=""></span>
+						<dl>
+                			<dt>기업 및 자영업자 </dt>
+                			<dd class="que">분야별 전문가를 모두 모시기엔 <br>비용이 부담되시죠?</dd>
+                			<dd>최소의 비용으로 최상의 서비스를 제공합니다.<br>IT전문가들이 귀사를 돕기 위해 <br>대기하고 있습니다.</dd>
+              			</dl>
+					</li>
+              	<li class="con_5_ba1">
+						<span class="mid_img"><img src="./images/banner/mid04.png" alt=""></span>
+						<dl>
+		                	<dt>스타트업 및 신규법인 </dt>
+		                	<dd class="que">IT 도움이 필요하신가요?</dd>
+		                	<dd>당신을 위해 IT분야 최고의 <br>전문가들이 맞춤상담 및 서비스를 하기 위해 <br>대기하고 있습니다.</dd>
+		              </dl>
+					</li>
+				<li class="con_5_ba1">
+						<span class="mid_img"><img src="./images/banner/mid03.png" alt=""></span>
+						<dl>
+			                <dt>전문가 </dt>
+			                <dd class="que">고객확보가 어려우신가요?</dd>
+			                <dd>최소의 비용으로 개인 및 기업고객을<br>확보하실 수 있습니다.<br>전문IT 통합서비스로 업무진행의 <br>효율성을 극대화할 수 있습니다. </dd>
+			           </dl>
+					</li>
+				
+				</ul>
+			</div>
 		</article>
 	</section>
 	
@@ -97,7 +126,7 @@ SMART AND GENUINE SERVICES FOR BUSINESSES</span><br>
 		<div id="ft_wrap">
 		<img alt="" src="./images/banner/logo2.png">
 			<p>서울시 강남구 역삼동 636-6 스카이타워 208호 / 사업자등록번호 : 587-08-01157 / 대표전화 : 02-557-4288 / 팩스 : 02-6442 4485 / 이메일 : ys523333@ysunweb.com
-YSUNWEB All Rights Reserved</p>
+<br>YSUNWEB All Rights Reserved</p>
 		</div>
 	</footer>
 </body>
