--- a/WebContent/board/boardlist.html
+++ b/WebContent/board/boardlist.html
@@ -3,6 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<style type="text/css">
 	
 		h1{
@@ -13,8 +22,8 @@
 		.col{
 	    	font-weight: bold;
 	    	font-size: 12px;
-	    	color: white;
-	    	background-color: black;
+	    	/*color: white;
+	    	background-color: black;*/
 		}
 		
 		.col td{
@@ -45,7 +54,7 @@
 			color: black;		
 		}
 		/*table*/
-		.tbl{
+		/*.tbl{
 			width : 830px;
 			border-spacing: 0px;
 			border-collapse: collapse;
@@ -55,7 +64,7 @@
 			border : black 2px solid;
 			height : 30px;
 			text-align: center;
-		}
+		}*/
 	</style>
 </head>
 
@@ -65,7 +74,7 @@
 	<!--  게시판 리스트 -->
 	<!-- 제목 클릭하면 boardselect로 이동 -->
 	
-	<table class="tbl">
+	<table class="table table-hover">
 		<tr class= "col">
 		<td class="dol1">no</td><td class="dol2">제목</td><td class="dol3">작성자</td><td class="dol4">작성일</td>
 		</tr>
